--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,12 @@
   {% include header.html %}
 
-  {{ content }}
+  <div class="row-fluid">
+    <div class="span8">
+        {{ content }}
+    </div>
+    <div class="span4">
+        {% include sidebar.html %}
+    </div>
+  </div>
 
   {% include footer.html %}
