--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         padding-top: 60px;
       }
     </style>
-    <link href="{{ site.url }}/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/bootstrap-theme.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
