adjusted footer text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <div class="footer">
   <div class="container">
-    <p class="text-muted">Place sticky footer content here.</p>
+    <p class="text-muted">Hosted on <a href="http://github.com">Github</a>.
+      Using <a href="http://getbootstrap.com/">Bootstrap</a></p>
   </div>
 </div>
 
