--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,15 +30,30 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">{{ site.name }}</a>
+          <!--<a class="navbar-brand" href="#">{{ site.name }}</a>-->
+          {{ site.name }}
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{ site.url }}">Home</a></li>
-            <li><a href="{{ site.url }}/About/">About</a></li>
-            <li><a href="{{ site.url }}/Blog/">Blog</a></li>
-            <li><a href="{{ site.url }}/Tasks/">Tasks</a></li>
-            <li><a href="{{ site.url }}/Journal/">Journal</a></li>
+            <li><a href="{{ site.url }}/blog/">Blog</a></li>
+            <li><a href="{{ site.url }}/tasks/">Tasks</a></li>
+            <li><a href="{{ site.url }}/journal/">Journal</a></li>
+            <li><a href="{{ site.url }}/inquiry-based-learning/">IBL</a></li>
+            <li><a href="{{ site.url }}/standards-based-assessment/">SBA</a></li>
+            <li><a href="{{ site.url }}/geogebra/">GGB</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="http://www.uni.edu">Northern Iowa</a></li>
+                <li><a href="http://www.uni.edu/math">UNI Math</a></li>
+                <li><a href="http://www.uni.edu/theron">Prof Hitchman</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">LaTeX stuff</li>
+                <li><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
+                <li><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
+              </ul>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
