more edits to navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{site.url }}/css/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/sticky-footer-navbar.css" rel="stylesheet">
   </head>
 
   <body>
@@ -30,8 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!--<a class="navbar-brand" href="#">{{ site.name }}</a>-->
-          {{ site.name }}
+          <<a class="navbar-brand" href="{{ site.url }}">{{ site.name }}</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -52,6 +51,8 @@
                 <li class="dropdown-header">LaTeX stuff</li>
                 <li><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
                 <li><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
+                <li class="dropdown-header">GeoGebra</li>
+                <li><a href="http://www.geogebra.org/cms/en/">GeoGebra</a></li>
               </ul>
             </li>
           </ul>
