--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                <li class="dropdown-header">UNI sites</li>
                 <li><a href="http://www.uni.edu">Northern Iowa</a></li>
                 <li><a href="http://www.uni.edu/math">UNI Math</a></li>
                 <li><a href="http://www.uni.edu/theron">Prof Hitchman</a></li>
@@ -51,6 +52,7 @@
                 <li class="dropdown-header">LaTeX stuff</li>
                 <li><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
                 <li><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
+                <li class="divider"></li>
                 <li class="dropdown-header">GeoGebra</li>
                 <li><a href="http://www.geogebra.org/cms/en/">GeoGebra</a></li>
               </ul>
