edited footer for license statement

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <div class="footer">
   <div class="container">
     <p class="text-muted">Hosted on <a href="http://github.com">Github</a>.
-      Using <a href="http://getbootstrap.com/">Bootstrap</a></p>
+      Using <a href="http://getbootstrap.com/">Bootstrap</a>. Contents
+      licensed as CC-BY 4.0 by Theron Hitchman, 2008-2014.</p>
   </div>
 </div>
 
