more tweakes to footer message

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <p class="text-muted">Hosted on <a href="http://github.com">Github</a>.
       Using <a href="http://getbootstrap.com/">Bootstrap</a>. Contents
-      licensed as CC-BY 4.0 by Theron Hitchman, 2008-2014.</p>
+      licensed CC-BY 4.0 Theron Hitchman, 2008-2014.</p>
   </div>
 </div>
 
