--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,8 @@
 
     <!-- Custom styles for this template -->
     <link href="{{ site.url }}/css/sticky-footer-navbar.css" rel="stylesheet">
+    <!-- stylesheet for pygments to work -->
+    <link href="{{ site.url }}/css/pygments.css" rel="stylesheet">
   </head>
 
   <body>
