--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,12 +12,12 @@
     <title>{{ site.name }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ site.url }}/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{ site.url }}/css/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/sticky-footer-navbar.css" rel="stylesheet">
     <!-- stylesheet for pygments to work -->
-    <link href="{{ site.url }}/css/pygments.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/css/pygments.css" rel="stylesheet">
   </head>
 
   <body>
@@ -32,17 +32,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.url }}">{{ site.name }}</a>
+          <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ site.url }}">Home</a></li>
-            <li><a href="{{ site.url }}/blog/">Blog</a></li>
-            <li><a href="{{ site.url }}/tasks/">Tasks</a></li>
-            <li><a href="{{ site.url }}/journal/">Journal</a></li>
-            <li><a href="{{ site.url }}/inquiry-based-learning/">IBL</a></li>
-            <li><a href="{{ site.url }}/standards-based-assessment/">SBA</a></li>
-            <li><a href="{{ site.url }}/geogebra/">GGB</a></li>
+            <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
+            <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/tasks/">Tasks</a></li>
+            <li><a href="{{ site.baseurl }}/journal/">Journal</a></li>
+            <li><a href="{{ site.baseurl }}/inquiry-based-learning/">IBL</a></li>
+            <li><a href="{{ site.baseurl }}/standards-based-assessment/">SBA</a></li>
+            <li><a href="{{ site.baseurl }}/geogebra/">GGB</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Links <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
