--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,12 @@
-{% includes header.html %}
+{% include header.html %}
 
 <!-- Begin page content -->
 <div class="container">
   <div class="page-header">
-    <h1>{{ post.title }}</h1>
-    <p>{{ post.date | date_to_long_string }}</p>
+    <h1>{{ post.title }}</h1> <!--: {{ post.date | date_to_long_string }}</h1>-->
   </div>
   {{ content }}
 </div>
 
 
-{% includes footer.html %}
+{% include footer.html %}
