MathJax is now working

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,11 @@
     <link href="{{ site.baseurl }}/css/sticky-footer-navbar.css" rel="stylesheet">
     <!-- stylesheet for pygments to work -->
     <link href="{{ site.baseurl }}/css/pygments.css" rel="stylesheet">
+    <!-- MathJax -->
+    <script type="text/javascript"
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+
   </head>
 
   <body>
