--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <!-- Begin page content -->
 <div class="container">
   <div class="page-header">
-    <h1>{{ post.title }}</h1> <!--: {{ post.date | date_to_long_string }}</h1>-->
+    <h2>{{ page.date | date: "%b %-d, %Y" }}: {{ page.title }}</h2>
   </div>
   {{ content }}
 </div>
