--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
             <li><a href="{{ site.baseurl }}/tasks/">Tasks</a></li>
             <li><a href="{{ site.baseurl }}/journal/">Journal</a></li>
