--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <div class="footer">
   <div class="container">
     <p class="text-muted">Hosted on <a href="http://github.com">Github</a>.
-      Using <a href="http://getbootstrap.com/">Bootstrap</a>. Contents
+      Using <a href="http://jekyllrb.com">Jekyll</a> and
+      <a href="http://getbootstrap.com/">Bootstrap</a>. Contents
       licensed CC-BY 4.0 Theron Hitchman, 2008-2014.</p>
   </div>
 </div>
