reorganized header, moved journal to writing and wrote new journal page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,29 +41,32 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="text-right"><a href="{{ site.baseurl }}/">Home</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/tasks/">Tasks</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/journal/">Journal</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/inquiry-based-learning/">IBL</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/standards-based-assessment/">SBA</a></li>
-            <li class="text-right"><a href="{{ site.baseurl }}/geogebra/">GGB</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
+            <li class="text-center"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+            <li class="text-center"><a href="{{ site.baseurl }}/tasks/">Tasks</a></li>
+            <li class="text-center"><a href="{{ site.baseurl }}/journal/">Journal</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle text-right" data-toggle="dropdown">Links <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown-header text-right">UNI sites</li>
-                <li class="text-right"><a href="http://www.uni.edu">Northern Iowa</a></li>
-                <li class="text-right"><a href="http://www.uni.edu/math">UNI Math</a></li>
-                <li class="text-right"><a href="http://www.uni.edu/theron">Prof Hitchman</a></li>
-                <li class="divider text-right"></li>
-                <li class="dropdown-header text-right">LaTeX stuff</li>
-                <li class="text-right"><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
-                <li class="text-right"><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
-                <li class="divider text-right"></li>
-                <li class="dropdown-header text-right">GeoGebra</li>
-                <li class="text-right"><a href="http://www.geogebra.org/cms/en/">GeoGebra</a></li>
+                <li><a href="{{ site.baseurl }}/inquiry-based-learning/">Inquiry</a></li>
+                <li><a href="{{ site.baseurl }}/standards-based-assessment/">Assessment</a></li>
+                <li><a href="{{site.baseurl}}/writing/">Writing</a></li>
+                <li><a href="{{ site.baseurl }}/geogebra/">Technology</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">External Links <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li class="dropdown-header">UNI sites</li>
+                <li><a href="http://www.uni.edu">Northern Iowa</a></li>
+                <li><a href="http://www.uni.edu/math">UNI Math</a></li>
+                <li><a href="http://www.uni.edu/theron">Prof Hitchman</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">LaTeX stuff</li>
+                <li><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
+                <li><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">GeoGebra</li>
+                <li><a href="http://www.geogebra.org/cms/en/">GeoGebra</a></li>
               </ul>
             </li>
           </ul>
