fixed bug for which hid blog posts on small screens

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
 <!-- Begin page content -->
-<div class="container hidden-xs">
+<div class="container">
   <ul class="pager">
     {% if page.previous.url %}
       <li class="previous"><a href="{{page.previous.url | prepend: site.baseurl}}"
