--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,8 +47,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                <li><a href="{{ site.baseurl }}/syllabus/">Syllabus</a></li>
                 <li><a href="{{ site.baseurl }}/inquiry-based-learning/">Inquiry</a></li>
-                <li><a href="{{ site.baseurl }}/standards-based-assessment/">Assessment</a></li>
+                <li><a href="{{ site.baseurl }}/specs-grading/">Assessment</a></li>
                 <li><a href="{{site.baseurl}}/writing/">Writing</a></li>
                 <li><a href="{{ site.baseurl }}/geogebra/">Technology</a></li>
               </ul>
