change navbar link from writelatex to overleaf

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,7 +64,7 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">LaTeX stuff</li>
                 <li><a href="http://github.com/theronhitchman/euclidean-geometry">EG Source Files</a></li>
-                <li><a href="https://www.writelatex.com/">WriteLaTeX</a></li>
+                <li><a href="https://www.overleaf.com/">Overleaf</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">GeoGebra</li>
                 <li><a href="http://www.geogebra.org/cms/en/">GeoGebra</a></li>
