update sidebar with fall 2015 info and clear out class problem list

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,11 +28,11 @@
   <div class="panel-body">
     <dl class="dl">
       <dt>Class Meetings:</dt>
-      <dd>MWF 11am in WRT 7</dd>
+      <dd>MWF 11am in WRT 105</dd>
     </dl>
     <dl class="dl">
       <dt>Office Hours:</dt>
-      <dd>MWF 10-11 and 2-3, or by appointment</dd>
+      <dd>Weekdays 2-3, or by appointment</dd>
     </dl>
   </div>
 </div>
