change header for address & update standards.md

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="{{ site.baseurl }}/syllabus/">Syllabus</a></li>
                 <li><a href="{{ site.baseurl }}/inquiry-based-learning/">Inquiry</a></li>
-                <li><a href="{{ site.baseurl }}/specs-grading/">Assessment</a></li>
+                <li><a href="{{ site.baseurl }}/assessment/">Assessment</a></li>
                 <li><a href="{{site.baseurl}}/writing/">Writing</a></li>
                 <li><a href="{{ site.baseurl }}/geogebra/">Technology</a></li>
               </ul>
