update to sidebar and syllabus

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,11 +28,11 @@
   <div class="panel-body">
     <dl class="dl">
       <dt>Class Meetings:</dt>
-      <dd>MWF 11am in WRT 105</dd>
+      <dd>MWF 1pm in WRT 08</dd>
     </dl>
     <dl class="dl">
       <dt>Office Hours:</dt>
-      <dd>Weekdays 2-3, or by appointment</dd>
+      <dd>TBA, or by appointment</dd>
     </dl>
   </div>
 </div>
