--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,16 +44,7 @@
             <li class="text-center"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
             <li class="text-center"><a href="{{ site.baseurl }}/tasks/">Tasks</a></li>
             <li class="text-center"><a href="{{ site.baseurl }}/journal/">Journal</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="{{ site.baseurl }}/syllabus/">Syllabus</a></li>
-                <li><a href="{{ site.baseurl }}/inquiry-based-learning/">Inquiry</a></li>
-                <li><a href="{{ site.baseurl }}/assessment/">Assessment</a></li>
-                <li><a href="{{site.baseurl}}/writing/">Writing</a></li>
-                <li><a href="{{ site.baseurl }}/geogebra/">Technology</a></li>
-              </ul>
-            </li>
+            <li class="text-center"><a href="{{ site.baseurl }}/syllabus/">Syllabus</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">External Links <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
