--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,9 @@
     </dl>
     <dl class="dl">
       <dt>Office Hours:</dt>
-      <dd>TBA, or by appointment</dd>
+      <dd>Please book a time during MWF 3-5pm, or TTh 2:30-5pm
+      through `youcanbook.me`</dd>
+      <a href="https://theronhitchman.youcanbook.me/" data-ycbm-modal="true"><img src="https://youcanbook.me/resources/pics/ycbm-button.png" style="border-style:none;"/></a>
     </dl>
   </div>
 </div>
