update sidebar with better text on OH

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,9 +32,8 @@
     </dl>
     <dl class="dl">
       <dt>Office Hours:</dt>
-      <dd>Please book a time during <br />
-      MWF 3-5pm, or TTh 2:30-5pm <br />
-      through the link below.</dd>
+      <dd>Use the link below to schedule a meeting during  
+        MWF 3-5pm, or TTh 2:30-5pm.</dd>
       <div class="text-center">
         <a href="https://theronhitchman.youcanbook.me/" data-ycbm-modal="true">
           <img src="https://youcanbook.me/resources/pics/ycbm-button.png" style="border-style:none;"/>
