update sidebar for 2017

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,12 +28,12 @@
   <div class="panel-body">
     <dl class="dl">
       <dt>Class Meetings:</dt>
-      <dd>MWF 1pm in WRT 08</dd>
+      <dd>MWF 9am in WRT 105</dd>
     </dl>
     <dl class="dl">
       <dt>Office Hours:</dt>
-      <dd>Use the link below to schedule a meeting during  
-        MWF 3-5pm, or TTh 2:30-5pm.</dd>
+      <dd>Use the link below to schedule a meeting during
+        M-F 3-4:30pm.</dd>
       <div class="text-center">
         <a href="https://theronhitchman.youcanbook.me/" data-ycbm-modal="true">
           <img src="https://youcanbook.me/resources/pics/ycbm-button.png" style="border-style:none;"/>
